# rustdesk

libs/clipboard/: Cargo.toml  README.md
libs/clipboard/src/: client_context.rs  clipboard_file.rs  cliprdr.h  lib.rs
libs/clipboard/src/system_impl/: mod.rs
libs/clipboard/src/windows/: wf_cliprdr.c
