[package]
name = "clipboard"
version = "0.1.0"
edition = "2021"
build= "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
thiserror = "1.0"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
hbb_common = { path = "../hbb_common" }
bitflags = "2.4"


[target.'cfg(windows)'.dependencies.winsafe]
version = "0.0.17"
features = ["ole", "oleaut", "user"]


